[tool.poetry]
name = "pacohub"
version = "0.1.0"
description = ""
authors = ["taraldga <taraldga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.6"
djangorestframework = "^3.12.2"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
